# ngram-doc-classifier

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
docs/: bibtex.bib  develop.md  develop.org
docs/presentation/: main.tex
models/: .gitignore  classification_report_3_300.json  model_3_300.json
scripts/: prepare_data.sh
src/: distance_measures.py  evaluate.py  predict.py  train.py  utils.py
test/: input.txt  input_short.txt  output_model_3_300.txt  output_short_model_3_300.txt
