[tool.poetry]
name = "language-detection"
version = "0.1.0"
description = ""
authors = ["Atreya Shankar <35427332+atreyasha@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.61.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
mypy = "^0.910"
snakeviz = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
